# Project-Scaffolder

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.e2e.config.ts
.github/workflows/: ci.yml
docs/: PLAN.md  TZ.md
src/: cli.ts  config.ts  generate.ts
templates/py-service/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
templates/py-service/.github/workflows/: ci.yml
templates/py-service/app/: __init__.py  main.py
templates/py-service/app/llm/: __init__.py  client.py  meter.py
templates/py-service/tests/: test_llm_smoke.py
templates/ts-cli/: .env.example  CLAUDE.md  README.md  package.json  tsconfig.json
templates/ts-cli/.github/workflows/: ci.yml
templates/ts-cli/src/: cli.ts  greet.ts
templates/ts-cli/tests/: greet.test.ts
templates/ts-fullstack/: CLAUDE.md  README.md  package.json  pnpm-workspace.yaml
templates/ts-fullstack/.github/workflows/: ci.yml
templates/ts-fullstack/service/: .env.example  package.json  tsconfig.json  vitest.config.ts  vitest.llm.config.ts
templates/ts-fullstack/service/prompts/: echo.v1.md
templates/ts-fullstack/service/src/: app.ts  index.ts
templates/ts-fullstack/service/tests/: health.test.ts  (+1 more)
templates/ts-fullstack/shared/: package.json
templates/ts-fullstack/web/: package.json  tsconfig.json  vite.config.ts
tests/e2e/: py-service.test.ts  ts-cli.test.ts  ts-fullstack.test.ts
tests/unit/: args.test.ts  dir-safety.test.ts  exit-codes.test.ts  generate.test.ts  name-validation.test.ts
(+7 files in other folders)
