[project]
name = "{{project_name}}"
version = "0.1.0"
description = "FastAPI service scaffolded by antlab-create"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.7",
    "anthropic>=0.57",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# llm-marked tests hit the real Anthropic API; excluded from default runs.
addopts = "-m 'not llm'"
markers = [
    "llm: smoke tests that call the real Anthropic API (run with: uv run pytest -m llm)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["app", "tests"]
plugins = ["pydantic.mypy"]
